Alterado formtação dos logs